--- a/src/day31/src/main/resources/application.properties
+++ b/src/day31/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8090
+
 # JDBC URL - replace localhost and port (3306) if different.
 spring.datasource.url=jdbc:mysql://localhost:3306/day31?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
@@ -8,6 +10,12 @@ spring.datasource.password=day31pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Force Spring to execute data.sql on startup even for an external DB like MySQL
 spring.sql.init.mode=always
+# Force Spring to execute data.sql after Hibernate creates schema
+spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.hikari.initializationFailTimeout=0
+spring.datasource.hikari.connectionTimeout=60000
+spring.jpa.properties.hibernate.hikari.poolName=HikariPool-1
 
 
 # JPA config
